@@ -286,12 +286,19 @@ module Zena
           "params[#{pagination_key.to_sym.inspect}]"
         end
 
+        def process_not_equal(left, right)
+          if left == [:field, 'class'] && (right[0] == :field || right[0] == :string)
+            process_equal(left, right, true)
+          else
+            super
+          end
+        end
+        
         # Handle special case for 'class = ' and 'role = ' and 'foo.date ='
-        def process_equal(left, right)
-          if (left == [:field, 'class'] || left == [:field, 'klass']) &&
-             (right[0] == :field || right[0] == :string)
+        def process_equal(left, right, is_not = nil)
+          if left == [:field, 'class'] && (right[0] == :field || right[0] == :string)
             if klass = Node.get_class(right.last)
-              "#{field_or_attr('kpath')} = #{quote(klass.kpath)}"
+              "#{field_or_attr('kpath')} #{is_not ? '<>' : '='} #{quote(klass.kpath)}"
             else
               raise ::QueryBuilder::Error.new("Unknown class #{right.last.inspect}.")
             end
@@ -316,15 +323,24 @@ module Zena
         end
 
         # Handle special case for 'class like '
-        def process_like(left, right)
+        def process_like(left, right, is_not = nil)
           if left == [:field, 'class'] && right[0] == :field
             if klass = Node.get_class(right[1])
-              "#{field_or_attr('kpath')} LIKE #{quote(klass.kpath + '%')}"
+              "#{field_or_attr('kpath')} #{is_not ? 'NOT ' : ''}LIKE #{quote(klass.kpath + '%')}"
             else
               raise QueryBuilder::QueryException.new("Unknown class #{right.last.inspect}.")
             end
           else
             process_op(:like, left, right)
+          end
+        end
+        
+        # [:like, [:field, "class"], [:field, "Image"]]
+        def process_not(arg)
+          if arg[1] == [:field, 'class'] && arg[0] == :like
+            process_like(arg[1], arg[2], true)
+          else
+            super
           end
         end
 
