@@ -3,6 +3,7 @@
 * Minor changes
  * Support for raw html in zazen with '<notextile>' or '<html>' tag. Must be allowed with notextile='true' on [zazen] tag.
  * Fixed preview of content with ACL (considering the POST on /zafu as a 'read').
+ * Added support for "class not like Image" or "class <> Image" to sqliss.
 
 == 1.2.3 2013-03-11
 
